fixes README and MANIFEST files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
-include AUTHORS.rst
 include CONTRIBUTING.rst
-include HISTORY.rst
 include LICENSE
 include README.rst
+include requirements*
 recursive-include loginlogout *.html *.png *.gif *js *.css *jpg *jpeg *svg *py
