add namespace to urls in templates

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,4 @@ include CONTRIBUTING.rst
 include LICENSE
 include README.rst
 include requirements*
-recursive-include loginlogout *.html *.png *.gif *js *.css *jpg *jpeg *svg *py
+recursive-include loginlogout *.html *.png *.gif *js *.css *jpg *jpeg *svg *py *mo *po
